--- a/login/src/app/app.component.css
+++ b/login/src/app/app.component.css
@@ -1,1 +1,8 @@
-/*  */
+.main {
+  background: 
+    linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),
+    url('https://bkecoit.ecoit.com.vn/sliders/image/1689939341336_ecoit.png') 
+    center/cover no-repeat;
+  min-height: 100vh;
+  width: 100%;
+}
