--- a/login/src/app/shared/sidebar/sidebar.component.html
+++ b/login/src/app/shared/sidebar/sidebar.component.html
@@ -1,60 +1,226 @@
-<aside class="sidebar" [ngClass]="{'closed': !sidebarOpen}">
+<aside class="sidebar" [ngClass]="{ closed: !sidebarOpen }">
   <!-- Header -->
   <div class="sidebar-header">
     <div class="logo"></div>
-    <!-- Đã xóa nút close-sidebar -->
   </div>
 
   <!-- Content -->
   <div class="sidebar-content">
     <!-- Section: Sản Phẩm -->
     <div class="sidebar-section">
-      <div class="section-title">Sản Phẩm</div>
-      <div class="section-links">
-        <a routerLink="/government" class="sidebar-link" routerLinkActive="active">Khách Hàng Chính Phủ</a>
-        <a routerLink="/security-defense" class="sidebar-link" routerLinkActive="active">Khách Hàng An Ninh - Quốc Phòng</a>
-        <a routerLink="/enterprise" class="sidebar-link" routerLinkActive="active">Khách Hàng Doanh Nghiệp</a>
-        <a routerLink="/finance-banking" class="sidebar-link" routerLinkActive="active">Khách Hàng Tài Chính - Ngân Hàng</a>
+      <div class="section-title" (click)="toggleSection('products')">
+        Sản Phẩm
+        <svg
+          class="toggle-icon"
+          [ngClass]="{ rotated: expandedSections.products }"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="currentColor"
+          viewBox="0 0 24 24"
+        >
+          <path d="M7 10l5 5 5-5H7z" />
+        </svg>
+      </div>
+      <div
+        class="section-links"
+        [ngClass]="{ expanded: expandedSections.products }"
+      >
+        <a
+          routerLink="/government"
+          class="sidebar-link"
+          routerLinkActive="active"
+        >
+          <svg
+            class="link-icon"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path
+              d="M12 2l10 5v12a2 2 0 01-2 2H4a2 2 0 01-2-2V7l10-5zm0 2.236L5.763 7.5v10.264h12.474V7.5L12 4.236zm-1 6.764h2v2h-2v-2zm0 4h2v2h-2v-2z"
+            />
+          </svg>
+          Khách Hàng Chính Phủ
+        </a>
+        <a
+          routerLink="/security-defense"
+          class="sidebar-link"
+          routerLinkActive="active"
+        >
+          <svg
+            class="link-icon"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path
+              d="M12 1l9 4v6c0 5.52-3.584 10.418-9 12-5.416-1.582-9-6.48-9-12V5l9-4zm0 2L4 6.6v4.4c0 4.56 2.88 8.64 7.2 10.08L12 22l.8-.92C17.12 19.64 20 15.56 20 11V6.6L12 3z"
+            />
+          </svg>
+          Khách Hàng An Ninh - Quốc Phòng
+        </a>
+        <a
+          routerLink="/enterprise"
+          class="sidebar-link"
+          routerLinkActive="active"
+        >
+          <svg
+            class="link-icon"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path
+              d="M19 3H5a2 2 0 00-2 2v14a2 2 0 002 2h14a2 2 0 002-2V5a2 2 0 00-2-2zm-1 16H6V7h12v12zM8 9h8v2H8V9zm0 4h8v2H8v-2z"
+            />
+          </svg>
+          Khách Hàng Doanh Nghiệp
+        </a>
+        <a
+          routerLink="/finance-banking"
+          class="sidebar-link"
+          routerLinkActive="active"
+        >
+          <svg
+            class="link-icon"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path
+              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-1-13h2v6h-2V7zm0 8h2v2h-2v-2z"
+            />
+          </svg>
+          Khách Hàng Tài Chính - Ngân Hàng
+        </a>
       </div>
     </div>
 
     <!-- Section: Thực Tập Sinh -->
     <div class="sidebar-section">
-      <div class="section-title">Thực Tập Sinh</div>
-      <div class="section-links">
-        <a routerLink="/intern" class="sidebar-link" routerLinkActive="active">Danh Sách Thực Tập Sinh</a>
-        <a routerLink="/internws" class="sidebar-link" routerLinkActive="active">Lịch Làm Việc</a>
-        <a routerLink="/performance" class="sidebar-link" routerLinkActive="active">Đánh Giá Hiệu Xuất</a>
+      <div class="section-title" (click)="toggleSection('interns')">
+        Thực Tập Sinh
+        <svg
+          class="toggle-icon"
+          [ngClass]="{ rotated: expandedSections.interns }"
+          xmlns="http://www.w3.org/200コラ0/svg"
+          fill="currentColor"
+          viewBox="0 0 24 24"
+        >
+          <path d="M7 10l5 5 5-5H7z" />
+        </svg>
+      </div>
+      <div
+        class="section-links"
+        [ngClass]="{ expanded: expandedSections.interns }"
+      >
+        <a routerLink="/intern" class="sidebar-link" routerLinkActive="active">
+          <svg
+            class="link-icon"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path
+              d="M16 4h-2v2h2V4zm-2 6h2v2h-2v-2zm4 0h2v2h-2v-2zm-8-6h2v2h-2V4zm2 6h-2v2h2v-2zm-4 0H6v2h2v-2zM6 4h2v2H6V4zm6 14h-2v2h2v-2zm4 0h-2v2h2v-2zm-8 0H6v2h2v-2zm12-6h-2v2h2v-2zm-4 0h2v2h-2v-2zM8 12H6v2h2v-2zm4 4H6v2h6v-2zm8 0h-6v2h6v-2z"
+            />
+          </svg>
+          Danh Sách Thực Tập Sinh
+        </a>
+        <a
+          routerLink="/internws"
+          class="sidebar-link"
+          routerLinkActive="active"
+        >
+          <svg
+            class="link-icon"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path
+              d="M19 3H5a2 2 0 00-2 2v14a2 2 0 002 2h14a2 2 0 002-2V5a2 2 0 00-2-2zm0 16H5V5h14v14zM7 7h10v2H7V7zm0 4h10v2H7v-2zm0 4h7v2H7v-2z"
+            />
+          </svg>
+          Lịch Làm Việc
+        </a>
+        <a
+          routerLink="/performance"
+          class="sidebar-link"
+          routerLinkActive="active"
+        >
+          <svg
+            class="link-icon"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path
+              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm-1-13h2v6h-2V7zm0 8h2v2h-2v-2z"
+            />
+          </svg>
+          Đánh Giá Hiệu Xuất
+        </a>
       </div>
     </div>
   </div>
 
   <!-- Footer -->
   <div class="sidebar-footer">
-    <div class="user-menu">
-      <div class="user-icon">
-        {{ getUserInitial() }}
+    <div class="user-menu" [ngClass]="{ active: isUserMenuOpen }">
+      <div class="user-icon" (click)="userMenuToggle()">
+        <span class="user-initial">{{ getUserInitial() }}</span>
+        <span class="user-name">{{ getUserName() }}</span>
       </div>
       <div class="user-dropdown">
         <div class="user-dropdown-header">
           {{ getUserName() }}
         </div>
-        <a href="#" class="user-dropdown-item">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-            <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664z"/>
+        <a routerLink="/profile" class="user-dropdown-item">
+          <svg
+            class="dropdown-icon"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664z"
+            />
           </svg>
           Hồ sơ của tôi
         </a>
-        <a href="#" class="user-dropdown-item">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-            <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c-1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c-1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c-.698-1.283.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
+        <a routerLink="/settings" class="user-dropdown-item">
+          <svg
+            class="dropdown-icon"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492zM5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0z"
+            />
+            <path
+              d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.433 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c-1.79-.527-1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52l-.094-.319zm-2.633.283c.246-.835 1.428-.835 1.674 0l-.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115l.094-.319z"
+            />
           </svg>
           Cài đặt
         </a>
         <div (click)="logout()" class="user-dropdown-item logout">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-            <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0z"/>
-            <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708z"/>
+          <svg
+            class="dropdown-icon"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor"
+            viewBox="0 0 16 16"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-
+
+8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0z"
+            />
+            <path
+              fill-rule="evenodd"
+              d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708z"
+            />
           </svg>
           Đăng xuất
         </div>
@@ -63,5 +229,14 @@
   </div>
 </aside>
 
-<!-- Toggle button khi sidebar đóng -->
-<button *ngIf="!sidebarOpen" class="sidebar-toggle" (click)="toggleSidebar()">≡</button>
+<!-- Toggle button when sidebar is closed -->
+<button *ngIf="!sidebarOpen" class="sidebar-toggle" (click)="toggleSidebar()">
+  <svg
+    xmlns="http://www.w3.org/2000/svg"
+    fill="currentColor"
+    viewBox="0 0 24 24"
+    class="toggle-icon"
+  >
+    <path d="M4 6h16v2H4V6zm0 5h16v2H4v-2zm0 5h16v2H4v-2z" />
+  </svg>
+</button>
